HybridIdentity-Single-Site-ADFSwithSQL-WAP-ADConnect/linkedtemplates/UpdateNetworkSecurityGroup.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
    "networkSecurityGroupName": {
      "type": "string",
      "metadata": {
        "description": "VNet name"
      }
    }, 
    "LocalSubnet1": {
      "type": "string",
      "metadata": {
        "description": "Local Server Subnet"
      }
    },
    "LocalSubnet2": {
      "type": "string",
      "metadata": {
        "description": "Local Client Subnet"
      }
    },    
    "BastionSubnet": {
      "type": "string",
      "metadata": {
        "description": "Bastion Subnet"
      }
    },        
    "DCPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "DC Private IP Address"
      }
    },            
    "OCSPPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "OCSP Private IP Address"
      }
    },        
    "EXPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Exchange Private IP Address"
      }
    },
    "LocalWAPPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Web Application Proxy Private IP Address"
      }
    },     
    "LocalADFSPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Local ADFS Private IP Address"
      }
    },         
    "location": {
        "type": "string",
        "metadata": {
          "description": "Region of Resources"
        }
      }
    },
    "resources": [
      {
        "apiVersion": "2019-04-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('networkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "Internet-Outbound",
              "properties": {
                "description": "Allow 80/TCP and 443/TCP Outbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRanges": [
                    "80",
                    "443"
                ],                
                "sourceAddressPrefixes": [
                    "[parameters('LocalSubnet1')]",
                    "[parameters('LocalSubnet2')]"
                ],                                  
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Outbound"
              }
            },
            {
              "name": "DNS-Outbound",
              "properties": {
                "description": "Allow DNS UDP (Port 53/UDP)",
                "protocol": "Udp",
                "sourcePortRange": "*",
                "destinationPortRange": "53",
                "sourceAddressPrefix": "[parameters('DCPrivateIP')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 201,
                "direction": "Outbound"
              }
            },            
            {
              "name": "OCSP-Inbound",
              "properties": {
                "description": "Opens Port HTTP (Port 80/TCP)",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "[parameters('OCSPPrivateIP')]",
                "access": "Allow",
                "priority": 201,
                "direction": "Inbound"
              }
            },
            {
                "name": "WAP-HTTPS-Inbound",
                "properties": {
                  "description": "Opens Port HTTPS (Port 443/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "access": "Allow",
                  "priority": 202,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "WAP-CERTAUTH",
                "properties": {
                  "description": "Opens Port CERTAUTH (Port 49443/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "49443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "access": "Allow",
                  "priority": 203,
                  "direction": "Inbound"
                }
            },  
            {
                "name": "Allow-AzureDNS-Outbound",
                "properties": {
                  "description": "Allow Azure DNS",
                  "protocol": "Udp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "53",
                  "sourceAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "destinationAddressPrefix": "168.63.129.16",
                  "access": "Allow",
                  "priority": 204,
                  "direction": "Outbound"
                }
            },  
            {
                "name": "Allow-CIFS-Transfer-Inbound",
                "properties": {
                  "description": "Allow Temporary CIFS Transfer",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "445",
                  "sourceAddressPrefixes": [
                      "[parameters('LocalWAPPrivateIP')]",
                      "[parameters('EXPrivateIP')]"
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalWAPPrivateIP')]",
                      "[parameters('EXPrivateIP')]"
                  ],
                  "access": "Allow",
                  "priority": 205,
                  "direction": "Inbound"
                }
            },                                                        
            {
                "name": "Allow-CIFS-Transfer-Outbound",
                "properties": {
                  "description": "Allow Temporary CIFS Transfer",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "445",
                  "sourceAddressPrefixes": [
                      "[parameters('LocalWAPPrivateIP')]",
                      "[parameters('EXPrivateIP')]"
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalWAPPrivateIP')]",
                      "[parameters('EXPrivateIP')]"
                  ],
                  "access": "Allow",
                  "priority": 205,
                  "direction": "Outbound"
                }
            },                                                                    
            {
                "name": "SMTP-Inbound",
                "properties": {
                  "description": "Opens Port SMTP (Port 25/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "25",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('EXPrivateIP')]",
                  "access": "Allow",
                  "priority": 300,
                  "direction": "Inbound"
                }
            },
            {
                "name": "SMTP-Outbound",
                "properties": {
                  "description": "Opens Port SMTP (Port 25/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "25",
                  "sourceAddressPrefix": "[parameters('EXPrivateIP')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 300,
                  "direction": "Outbound"
                }
            },            
            {
                "name": "ADFS-to-WAP-Inbound",
                "properties": {
                  "description": "Allow Traffic from ADFS to Local WAP",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRanges": [
                      "80",
                      "443"
                  ],                                  
                  "sourceAddressPrefixes": [
                      "[parameters('LocalADFSPrivateIP')]",
                      "[parameters('LocalWAPPrivateIP')]"
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalADFSPrivateIP')]",
                      "[parameters('LocalWAPPrivateIP')]"                      
                  ],
                  "access": "Allow",
                  "priority": 401,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "WAP-to-ADFS-Outbound",
                "properties": {
                  "description": "Allow Traffic from Local WAP to Local ADFS",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRanges": [
                      "80",
                      "443"
                  ],                                  
                  "sourceAddressPrefixes": [
                      "[parameters('LocalADFSPrivateIP')]",
                      "[parameters('LocalWAPPrivateIP')]"                      
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalADFSPrivateIP')]",
                      "[parameters('LocalWAPPrivateIP')]"
                  ],
                  "access": "Allow",
                  "priority": 401,
                  "direction": "Outbound"
                }
            },                        
            {
                "name": "Allow-InternalSubnets-Inbound",
                "properties": {
                  "description": "Allow Traffic Between Internal Subnets",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefixes": [
                      "[parameters('LocalSubnet1')]",
                      "[parameters('LocalSubnet2')]"
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalSubnet1')]",
                      "[parameters('LocalSubnet2')]"
                  ],
                  "access": "Allow",
                  "priority": 500,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "Allow-InternalSubnets-Outbound",
                "properties": {
                  "description": "Allow Traffic Between Internal Subnets",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefixes": [
                      "[parameters('LocalSubnet1')]",
                      "[parameters('LocalSubnet2')]"
                  ],                  
                  "destinationAddressPrefixes": [
                      "[parameters('LocalSubnet1')]",
                      "[parameters('LocalSubnet2')]"
                  ],
                  "access": "Allow",
                  "priority": 500,
                  "direction": "Outbound"
                }
            },                                              
            {
                "name": "Allow-Bastion-Inbound",
                "properties": {
                  "description": "Allow Traffic from Bastion",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3389",
                  "sourceAddressPrefix": "[parameters('BastionSubnet')]",
                  "destinationAddressPrefixes": [
                      "[parameters('LocalSubnet1')]",
                      "[parameters('LocalSubnet2')]",
                      "[parameters('LocalWAPPrivateIP')]"
                  ],
                  "access": "Allow",
                  "priority": 600,
                  "direction": "Inbound"
                }
            },                        
            {
                "name": "Deny-All-Inbound",
                "properties": {
                  "description": "Deny All Inbound Traffic",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 4000,
                  "direction": "Inbound"
                }
            },
            {
                "name": "Deny-All-Outbound",
                "properties": {
                  "description": "Deny All Outbound Traffic",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 4000,
                  "direction": "Outbound"
                }
            }            
          ]
        }
      }
    ]
  }
